@@ -1,3 +1,7 @@
+2011-05-25 Jiri Olsa <olsajiri@gmail.com>
+	* adding SIGTERM/SIGINT handlers,
+	  refactoring lt_run to check the latrace got killed
+
 2011-05-24 Jiri Olsa <olsajiri@gmail.com>
 	* args - use isprint to decide whether to print the character,
 	  force test.sh to use bash,
